--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 .MuiContainer-root {
-  background-color: rgba(0, 0, 255, 0.3);
+  background-color: rgba(0, 0, 255, 0.1);
   padding-top: 5vh;
   width: 500px;
   min-width: 375px;
@@ -40,4 +40,13 @@ img {
 .text-button-grid {
   height: 50%;
   width: auto;
+}
+
+.MuiTabs-root {
+  background-color: rgba(0, 0, 255, 0.1) !important;
+  width: 100%;
+  color: white !important;
+}
+
+.MuiTab-root {
 }
